--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <a href="#menu"    class="hover:text-primary">MENU</a>
       <a href="#news"    class="hover:text-primary">NEWS</a>
 
-      <a href="https://www.instagram.com/sora.nakaza/" aria-label="Instagram">
+      <a href="https://www.instagram.com/sora_design_jp/" aria-label="Instagram">
         <svg class="w-6 h-6 fill-none stroke-current" viewBox="0 0 24 24" stroke-width="1.8">
           <rect x="2.2" y="2.2" width="19.6" height="19.6" rx="5" ry="5"/>
           <circle cx="12" cy="12" r="3.8" />
@@ -86,7 +86,7 @@
     <a href="news.html"    class="block text-lg">NEWS</a>
 
     <div class="flex justify-center gap-8 pt-10">
-      <a href="https://www.instagram.com/sora.nakaza/" aria-label="Instagram">
+      <a href="https://www.instagram.com/sora_design_jp/" aria-label="Instagram">
         <svg class="w-6 h-6 fill-none stroke-current" viewBox="0 0 24 24" stroke-width="1.8">
           <rect x="2.2" y="2.2" width="19.6" height="19.6" rx="5" ry="5"/>
           <circle cx="12" cy="12" r="3.8" />
@@ -267,7 +267,7 @@
   <div class="absolute inset-0 bg-black/60 flex flex-col items-center justify-center text-white text-center px-4">
     <h3 class="font-en text-xl sm:text-3xl mb-3">INSTAGRAM</h3>
     <p class="text-xs sm:text-sm">最新情報はインスタで更新中！</p>
-    <a href="https://www.instagram.com/sora.nakaza/"
+    <a href="https://www.instagram.com/sora_design_jp/"
        class="mt-6 inline-block px-10 py-2 bg-white text-primary text-sm rounded-full">
       FOLLOW&nbsp;US
     </a>
@@ -283,7 +283,7 @@
     <div class="space-y-4">
       <p class="text-xl font-en font-bold">Natural.</p>
       <div class="flex gap-4 justify-center md:justify-start">
-        <a href="https://www.instagram.com/sora.nakaza/" aria-label="Instagram" class="hover:text-accent">
+        <a href="https://www.instagram.com/sora_design_jp/" aria-label="Instagram" class="hover:text-accent">
           <svg class="w-6 h-6 fill-none stroke-current" viewBox="0 0 24 24" stroke-width="1.8">
             <circle cx="12" cy="12" r="3.8" /><rect x="2.2" y="2.2" width="19.6" height="19.6" rx="5" ry="5"/><circle cx="18" cy="6" r="1.2"/>
           </svg>
