--- a/news.html
+++ b/news.html
@@ -54,7 +54,7 @@
       <a href="#menu"    class="hover:text-primary">MENU</a>
       <a href="#news"    class="hover:text-primary">NEWS</a>
 
-      <a href="https://www.instagram.com/sora.nakaza/" aria-label="Instagram">
+      <a href="https://www.instagram.com/sora_design_jp/" aria-label="Instagram">
         <svg class="w-6 h-6 fill-none stroke-current" viewBox="0 0 24 24" stroke-width="1.8">
           <rect x="2.2" y="2.2" width="19.6" height="19.6" rx="5" ry="5"/>
           <circle cx="12" cy="12" r="3.8" />
@@ -86,7 +86,7 @@
     <a href="news.html"    class="block text-lg">NEWS</a>
 
     <div class="flex justify-center gap-8 pt-10">
-      <a href="https://www.instagram.com/sora.nakaza/" aria-label="Instagram">
+      <a href="https://www.instagram.com/sora_design_jp/" aria-label="Instagram">
         <svg class="w-6 h-6 fill-none stroke-current" viewBox="0 0 24 24" stroke-width="1.8">
           <rect x="2.2" y="2.2" width="19.6" height="19.6" rx="5" ry="5"/>
           <circle cx="12" cy="12" r="3.8" />
